ahammett: setup server

--- a/configure.yml
+++ b/configure.yml
@@ -3,17 +3,7 @@
 
    gather_facts: false
 
-   tasks:
-    - name: ensure ansible is updated
-      apt: name=ansible state=latest
-      sudo: yes
-
-    - name: verify ansible
-      shell: ansible --version
-
-    - name: ensure git is updated
-      apt: name=git state=latest
-      sudo: yes
-
-    - name: verify git
-      shell: git --version
+   roles:
+    - ansible
+    - git
+    - apache
